--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 site_title = "MyArxiv"
 limit_days = 7
-cache_url = "https://mlnlp-world.github.io/MyArxiv/cache.json"
+cache_url = "https://github.com/zhaowenxun/WenxunPrivateArxiv/blob/gh-pages/cache.json"
 
 [[sources]]
 limit = 150
