--- a/config.toml
+++ b/config.toml
@@ -4,10 +4,12 @@ cache_url = "https://github.com/zhaowenxun/WenxunPrivateArxiv/blob/gh-pages/cach
 
 [[sources]]
 limit = 150
+category = "cs.CV"
 title = "nerf"
 
 [[sources]]
 limit = 150
+category = "cs.CV"
 title = "hdr"
 
 
